xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__simple_map.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"(1, 2) ! (. * 2)\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Apply(ApplyExpr(
        path_expr: PathExpr(
          steps: [
            PrimaryExpr(Expr(Expr([
              Path(PathExpr(
                steps: [
                  PrimaryExpr(Literal(Integer((Positive, [
                    1,
                  ])))),
                ],
              )),
              Path(PathExpr(
                steps: [
                  PrimaryExpr(Literal(Integer((Positive, [
                    2,
                  ])))),
                ],
              )),
            ]))),
          ],
        ),
        operator: SimpleMap([
          PathExpr(
            steps: [
              PrimaryExpr(Expr(Expr([
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(Expr(Expr([
                      Binary(BinaryExpr(
                        operator: Mul,
                        left: PathExpr(
                          steps: [
                            PrimaryExpr(ContextItem),
                          ],
                        ),
                        right: PathExpr(
                          steps: [
                            PrimaryExpr(Literal(Integer((Positive, [
                              2,
                            ])))),
                          ],
                        ),
                      )),
                    ]))),
                  ],
                )),
              ]))),
            ],
          ),
        ]),
      )),
    ]))),
  ],
)))
