xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__static_function_call_args.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"my_function(1, 2)\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "my_function",
        prefix: None,
        namespace: None,
      ),
      arguments: [
        Path(PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        )),
        Path(PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              2,
            ])))),
          ],
        )),
      ],
    ))),
  ],
)))
