xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__static_function_call_placeholder.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"my_function(?, 1)\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "placeholder0",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
      ],
      return_type: None,
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(FunctionCall(FunctionCall(
              name: Name(
                name: "my_function",
                prefix: None,
                namespace: None,
              ),
              arguments: [
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(VarRef(Name(
                      name: "placeholder0",
                      prefix: None,
                      namespace: None,
                    ))),
                  ],
                )),
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(Literal(Integer((Positive, [
                      1,
                    ])))),
                  ],
                )),
              ],
            ))),
          ],
        )),
      ])),
    ))),
  ],
)))
