xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__unary_expr.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"-1\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Apply(ApplyExpr(
        path_expr: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        ),
        operator: Unary([
          Minus,
        ]),
      )),
    ]))),
  ],
)))
